# Haskell-Desugar-Generic

./: .gitignore  Haskell-Desugar-Generic.cabal  README.md
Examples/: XMonad.hs
Examples/XMonad/: SS.hs  SS_Bitter.hs  SS_bitter.hs  SS_noListComp.hs  StackSet.hs
Language/Haskell/Exts/: SimpleGenerics.hs  Unique.hs
Language/Haskell/Exts/Desugar/: Basic.hs  Generic.hs
Language/Haskell/Exts/Desugar/Generic/: Case.hs  Declaration.hs  Declaration.hs-boot  Expression.hs  Others.hs  Pattern.hs  Type.hs
